﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.19) stable; urgency=low

  * osparser: new SearchForSectionLines
  * osparser: SearchForSectionLines used in produceStringlist and doAktionen

-- Detlef Oertel <d.oertel@uib.de>  Tue, 8 May 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.18) stable; urgency=low

  * oslog: fix logging defined function that are included

-- Detlef Oertel <d.oertel@uib.de>  Thu, 3 May 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.17) stable; urgency=low

  * osparser: processcall: log Executing on LLNotice
  * new unit osparserhelper in common (Skip / getword /  ...)
  * osdefinedfunctions: int new local string vars
  * osdefinedfunctions: isVisibleLocalVar check for empty varname
  * osparser: catch powershellCall at Linux
  * OsDefinedFunction.parseCallParameter: fix handling parameters with ')'

-- Detlef Oertel <d.oertel@uib.de>  Fri, 13 Apr 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.16) stable; urgency=low

  * typo of log messages
  * change to Lazarus 1.8.2
  * switch HighDPI awareness on (8.1+, per monitor)
  * osparser: reportError: more info on defined functions at syntax error
  * osfunc: getsectionlines: include leading comments and empty lines
  * osdefinedfunctions, osparser: allow defined functions with no parameters; fixes #3182
  * osdefinedfunctions, osparser: allow defined functions with data  type void
  * oslog: fixed check for library logging
  * activate normal debug_lib again (see 4.12.0.13 temporary always true)
  * osparser: doAktionen: tsDefineFunction: try-excepts
  * osparser: reread opsi.conf parameters for every script; fixes #3337
  * osparser: splitstring: if string is confidential all parts are confidential as well; fixes #3186