@@ -9,6 +9,8 @@ opsi-winst/opsi-script (4.12.0.19) stable; urgency=low
 
   * osparser: new SearchForSectionLines
   * osparser: SearchForSectionLines used in produceStringlist and doAktionen
+  * oswebservice connection timeout 20 sec
+  * osdefinedfunctions: fix at free the local Vars (no $result$ if dfpVoid
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 8 May 2018:15:00:00 +0200
 
